git subrepo pull modules
subrepo:
  subdir:   "modules"
  merged:   "21b33e406f"
upstream:
  origin:   "git@github.com:daisy/pipeline-modules.git"
  branch:   "master"
  commit:   "aec26b7fbc"
git-subrepo:
  version:  "0.3.1"
  origin:   "???"
  commit:   "???"